--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-/* @tailwind base;
+ @tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities; 
 
 .card {
   padding: 2em;
@@ -50,7 +50,12 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.button{
+  text-align:center;
+  width:100%;
+  display:flex;
+  align-items:center;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
